--- a/_posts/2015-08-02-rot-ord.md
+++ b/_posts/2015-08-02-rot-ord.md
@@ -1,3 +1,12 @@
+---
+layout: post
+title:  "Finnes kvadratrot-ord?"
+date:   søndag, 02. august 2015 11:17 
+thumbnail: /assets/003-banner.jpg
+category: matematikk programmering
+tags: programmering matematikk tall
+---
+
 ##Finnes kvadratrot-ord?
 
 Hva? Hva er et *kvadratrotord*?
