--- a/_posts/2015-08-02-rot-ord.md
+++ b/_posts/2015-08-02-rot-ord.md
@@ -9,6 +9,8 @@ tags: programmering matematikk tall kode språk
 
 Hva? Hva er et *kvadratrotord*?
 
+![](/home/orjanv/Development/Code/orjanv.github.io/assets/rot-ord.jpg) 
+
 På engelsk er **81** (EIGHTY-ONE) et kvadratrotord fordi ordet har ni bokstaver og kvadratroten av 81 er 9.
 
 Det samme med **100** (ONE HUNDRED), det har ti bokstaver og kvadratroten av 100 er 10.
