--- a/_posts/2015-08-02-rot-ord.md
+++ b/_posts/2015-08-02-rot-ord.md
@@ -28,3 +28,5 @@ På norsk viser det seg at **49** (FØRTI-NI) er det første rot-tallet. FØRTI-
 ***
 
 Hvordan ville du gått frem for å finne slike tall? Hvordan ville du skrevet koden som skal finne dette? Hvilket språk ville du valgt til å løse problemet?
+
+Kilde: [futilitycloset.com](http://www.futilitycloset.com/2010/08/24/root-words-2/)
