--- a/_posts/2015-08-02-rot-ord.md
+++ b/_posts/2015-08-02-rot-ord.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Finnes kvadratrot-ord?"
 date:   2015-08-02 11:11:30
 thumbnail: /assets/rot-ord.jpg
-category: programmering
+category: matematikk
 tags: programmering matematikk tall kode språk
 ---
 
