ny blogginnlegg - påsken

--- a/_posts/2016-03-19-pasken.md
+++ b/_posts/2016-03-19-pasken.md
@@ -24,4 +24,5 @@ Om Jesus ikke ble levende er alt vi tror på bortkastet og uten mening, lik null
 
 ![Den Første Påsken - NRK Super](https://gfx.nrk.no/kCe-0m8FbmWJq_S8S3pVTgbd5DG50Q4c4rgRqhSN67Ew)
 
-*Kilde: http://www.bibel.no/Nettbibelen.aspx?parse=1%20Kor%2015 (Oppstandelsen, 1. Kor 15)*
+***
+*Kilde: [Oppstandelsen, 1. Kor 15 - bibel.no](http://www.bibel.no/Nettbibelen.aspx?parse=1%20Kor%2015)*
