ny blogginnlegg - påsken

--- a/_posts/2016-03-19-pasken.md
+++ b/_posts/2016-03-19-pasken.md
@@ -25,4 +25,7 @@ Om Jesus ikke ble levende igjen er alt vi tror på bortkastet og uten mening, he
 ![Den Første Påsken - NRK Super](https://gfx.nrk.no/kCe-0m8FbmWJq_S8S3pVTgbd5DG50Q4c4rgRqhSN67Ew)
 
 ***
-*Kilde: [Oppstandelsen, 1. Kor 15 - bibel.no](http://www.bibel.no/Nettbibelen.aspx?parse=1%20Kor%2015)*
+Kilder: 
+
+* *[Oppstandelsen, 1. Kor 15 - bibel.no](http://www.bibel.no/Nettbibelen.aspx?parse=1%20Kor%2015)*
+* *[NRK - Den første påsken](https://tv.nrk.no/program/fbui5000280Q0/den-foerste-paasken)*
